apps/demo-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
